--- a/static/css/login.css
+++ b/static/css/login.css
@@ -12,7 +12,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url('Background.jpg') no-repeat;
+    background: url('../img/Background.jpg') no-repeat;
     background-size: cover;
     background-position: center;
 }
@@ -121,4 +121,3 @@ body {
 .register-link p a:hover {
     text-decoration: underline;
 }
-
