--- a/static/style.css
+++ b/static/style.css
@@ -35,6 +35,7 @@
       align-items: center;
       flex-direction: column;
       justify-content: center;
+      margin: -6px;
     }
 
     .track-art {
@@ -51,6 +52,16 @@
       -moz-border-radius: 190px;
       -webkit-border-radius: 190px;
       border-radius: 190px;
+    }
+     
+    .track-art {
+      overflow: hidden; 
+    }
+
+    .track-art img{
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
 
     .now-playing {
