--- a/templates/lose.html
+++ b/templates/lose.html
@@ -21,7 +21,7 @@
         <img class="imgGif" src="../images/halloween.gif" alt="image">
     </div>
 
-    <form action=""  method="post">
+    <form action="/lose"  method="post">
         <div class="div-btn">
             <button class="myBtn" name="btnLose">Restart🔄</button>
         </div>
