--- a/static/style.css
+++ b/static/style.css
@@ -89,7 +89,6 @@
       color: black;
     }
 
-    .repeat-track,
     .playpause-track,
     .prev-track,
     .next-track {
@@ -98,7 +97,6 @@
       transition: opacity .2s;
     }
 
-    .repeat-track:hover,
     .playpause-track:hover,
     .prev-track:hover,
     .next-track:hover {
@@ -135,7 +133,7 @@
 
     
     .inputResquest,
-    .mybtn {
+    .Mybtn {
       display: flex;
       justify-content: center;
     }
@@ -145,7 +143,7 @@
       font-size: 1.5em;
     }
 
-    .mybtn {
+    .Mybtn {
       background-color: green;
       border-radius: 10px;
       font-size: 1em;
