--- a/static/css/home.css
+++ b/static/css/home.css
@@ -118,6 +118,7 @@ text-align: center;
     font-family: "Neonderthaw", cursive;
     font-weight: 400;
     font-style: normal;
+    cursor: pointer;
 }
 
 #artiste-example{
