--- a/static/style.css
+++ b/static/style.css
@@ -123,6 +123,7 @@ margin: 7%;
   }
 
   .deco-Img{
+    background: center / cover no-repeat url("https://cdn-0001.qstv.on.epicgames.com/STtNnKCZQQLvsJRioZ/image/landscape_comp.jpeg");
     transform: translateX(118%);
     border: solid 1px black;
     height: 30%;
@@ -133,6 +134,4 @@ margin: 7%;
     box-shadow: 0px 6px 5px black;
     -moz-border-radius: 190px;
     -webkit-border-radius: 190px;
-    background: center / cover no-repeat  url("../img/Blind-Test-removebg-preview.png");
-
   }
