--- a/static/style.css
+++ b/static/style.css
@@ -134,4 +134,5 @@ margin: 7%;
     box-shadow: 0px 6px 5px black;
     -moz-border-radius: 190px;
     -webkit-border-radius: 190px;
+    margin: 10px;
   }
