--- a/templates/index.html
+++ b/templates/index.html
@@ -44,6 +44,10 @@
                 </div>
                 <div class="track-artist">
                     {{.TitleSong}}
+                    <br>
+                    <div class="cheatMess">
+                    {{.CheatMess}}
+                    </div>
                 </div>
             </div>
 
