--- a/static/css/ProfilUser.css
+++ b/static/css/ProfilUser.css
@@ -1,5 +1,4 @@
-body {
-    background: #f5f5f5;
+body{
     margin-top: 20px;
 }
 
@@ -99,4 +98,83 @@ html:not(.dark-style) .account-settings-links .list-group-item.active {
 
 img{
 border-radius: 50%;
+}
+
+
+.sidebar {
+    height: 100%;
+    width: 4%; 
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: #201e1e;
+    padding-top: 1%;
+    transition: width 0.3s; 
+    border-radius: 10px;
+    border: solid 2px;
+}
+
+.sidebar.expanded {
+    width: 9%; 
+    border-radius: 10px;
+}
+
+.sidebar .dropdown-btn {
+    width: 50%;
+    padding: 16%;
+    font-size: 16px;
+    text-align: left;
+    background-color: #201e1e;
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
+
+.sidebar .dropdown-container {
+    display: none;
+    background-color: #201e1e;
+}
+
+.sidebar .dropdown-container a {
+    padding: 12% 16%;
+    text-decoration: none;
+    font-size: 14px;
+    color: white;
+    display: block;
+}
+
+.sidebar .dropdown-btn.active {
+    background-color: #201e1e;
+}
+
+.sidebar .dropdown-container.show {
+    display: block;
+}
+
+
+.icone-2{
+    display: flex;
+    margin: 10%;
+}
+
+.icone-2{
+    border-radius: 100px;
+    margin: 5%;
+    transition: transform 0.3s ease;
+    border: solid black;
+}
+
+img:hover{
+    transform: scale(1.1);
+}
+
+
+@media screen and (max-width: 1200px) {
+    .sidebar {
+        width: 25%;
+    }
+
+    .sidebar.expanded {
+        width: 30%;
+    }
 }
