--- a/static/css/userProfil.css
+++ b/static/css/userProfil.css
@@ -1,5 +1,6 @@
 body{
     margin-top: 20px;
+    background-color: "#494949";
 }
 
 .ui-w-80 {
@@ -33,7 +34,7 @@ label.btn {
 
 .card {
     background-clip: padding-box;
-    box-shadow     : 0 1px 4px rgba(24, 28, 33, 0.012);
+    box-shadow: 0 1px 4px rgba(24, 28, 33, 0.012);
 }
 
 .row-bordered {
