--- a/static/css/petitBac.css
+++ b/static/css/petitBac.css
@@ -1,6 +1,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     background: rgb(39, 38, 38);
+    
 }
 
 .title-top {
@@ -21,7 +22,7 @@ body {
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
     height: 50%;
     width: 50%;
-    transform: translateX(50%);
+    transform: translateX(70%);
 }
 
 
@@ -141,3 +142,24 @@ body {
     border: 0.5px black solid;
     border-radius: 5px;
 }
+
+.lyrics {
+    border: solid black 1px;
+    border-radius: 10px;
+    color: #ddd;
+    background-color: rgba(64, 62, 62, 0.5);
+    width: 30%;
+    height: 80%;
+    overflow: auto;
+    transform: translateY(100%);
+  }
+  
+  .divParoles {
+    text-align: center;
+    font-family: "Cormorant", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    white-space: pre-line;
+  }
+  
