--- a/static/css/petitBac.css
+++ b/static/css/petitBac.css
@@ -22,12 +22,12 @@ body {
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
     height: 50%;
     width: 50%;
-    transform: translateX(70%);
+    transform: translateX(80%) translateY(-5%);
 }
-
 
 .track-art {
     margin: 2%;
+    margin-left: 180px;
     justify-content: center;
     height: 250px;
     width: 250px;
@@ -48,6 +48,42 @@ body {
 .requestWords {
     border-radius: 50px;
     font-size: 3vh;
+}
+
+.inputForm {
+    margin-left: 325px;
+    margin-top: -245px;
+    margin-right: -30px;
+}
+
+.inputForm button{
+    margin-left: -150px;
+    margin-top: 10px;
+}
+
+.LetterContainer {
+    color: black;
+    font-size: 2em;
+    font-weight: 300;
+    font-style: normal;
+    margin-top: 90px;
+}
+
+#randomLetter {
+    color: black;
+    font-size: 1.5em;
+    font-weight: 300;
+    font-style: normal;
+    margin-left: 100px;
+}
+
+#timeRemaining {
+    color: black;
+    font-size: 1.5em;
+    font-weight: 300;
+    font-style: normal;
+    margin-top: 50px;
+    margin-left: 5px;
 }
 
 .wordsContainer {
@@ -91,7 +127,7 @@ body {
     height: 450px;
     width: 45%; 
     margin-top: 100px;
-    margin-left: 410px;
+    margin-left: 425px;
 }
 
 .deco-Img{
@@ -148,18 +184,18 @@ body {
     border-radius: 10px;
     color: #ddd;
     background-color: rgba(64, 62, 62, 0.5);
-    width: 30%;
+    width: 38%;
     height: 80%;
     overflow: auto;
     transform: translateY(100%);
-  }
+}
   
-  .divParoles {
+.divParoles {
     text-align: center;
     font-family: "Cormorant", serif;
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
     white-space: pre-line;
-  }
+}
   
