--- a/static/css/guessTheSong.css
+++ b/static/css/guessTheSong.css
@@ -4,7 +4,6 @@ body {
   overflow: hidden;
 }
 
-
 .title-top {
   color: white;
   display: flex;
@@ -83,7 +82,6 @@ body {
   color: black;
 }
 
-
 .seek_slider:hover,
 .volume_slider:hover {
   opacity: 1.0;
@@ -143,21 +141,33 @@ body {
   border-radius: 10px;
   color: #ddd;
   background-color: rgba(64, 62, 62, 0.5);
-  transform: translateY(3%);
+  transform: translateY(-10%);
   width: 100%;
-  height: 80%;
+  height: 40%;
   overflow: auto;
-  margin: -5px;
+  margin: -15px;
+  align-content: center;
+  overflow: hidden;
 }
 
 .divParoles {
-  margin: 2%;
+  margin-top: -40px;
   text-align: center;
   font-family: "Cormorant", serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+  font-size: 20px;
   white-space: pre-line;
+}
+
+.lines {
+  transition: opacity 1s ease;
+  margin: -1.5%;
+}
+
+.fade-in {
+  opacity: 1 !important;
 }
 
 .track-name,
