--- a/static/css/guessTheSong.css
+++ b/static/css/guessTheSong.css
@@ -136,18 +136,17 @@ body {
   width: 5.6%;
 }
 
-.lyrics {
+.lyricsContainer {
   border: solid black 1px;
   border-radius: 10px;
   color: #ddd;
   background-color: rgba(64, 62, 62, 0.5);
   transform: translateY(-10%);
   width: 100%;
-  height: 40%;
+  height: 60%;
   overflow: auto;
   margin: -15px;
   align-content: center;
-  overflow: hidden;
 }
 
 .divParoles {
@@ -159,6 +158,7 @@ body {
   font-style: normal;
   font-size: 20px;
   white-space: pre-line;
+  overflow: hidden;
 }
 
 .lines {
@@ -290,4 +290,27 @@ body {
   color: rgb(0, 0, 0);
   border: 0.5px black solid;
   border-radius: 5px;
+}
+
+.ChatMessage{
+  text-align: center;
+  margin: 0;
+}
+
+.mybtnMessage{
+  border-radius: 10px;
+ background-color: green;
+}
+
+.myInput{
+  border-radius: 10px;
+}
+
+.DeleteBtn{
+  border-radius: 10px;
+  background-color: red;
+}
+
+.Message {
+  margin: 5px 0; 
 }
