--- a/static/css/blindTest.css
+++ b/static/css/blindTest.css
@@ -166,3 +166,41 @@ body {
   border: 0.5px black solid;
   border-radius: 5px;
 }
+
+
+
+.lyrics {
+  border: solid black 1px;
+  border-radius: 10px;
+  color: #ddd;
+  background-color: rgba(64, 62, 62, 0.5);
+  width: 38%;
+  overflow: auto;
+  margin: 2%;
+}
+
+.divParoles {
+  text-align: center;
+  font-family: "Cormorant", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  height: 250px;
+}
+
+.mybtnMessage{
+  background-color: green;
+  border-radius: 10px;
+}
+
+.myInput{
+  border-radius: 10px;
+  margin: 1.5%;
+}
+
+.DeleteBtn{
+  color: white;
+  background-color: red;
+  border-radius: 10px;
+  margin: 0.5%;
+}
